<resources>
    <string name="app_name">BancoJesus</string>
    <string name="acceder">Acceder</string>
    <string name="bienvenido">Bienvenido a DINERBANK</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="acceso">Acceso Cliente</string>
    <string name="usuario">Usuario (DNI)</string>
    <string name="contrasenya">Contraseña</string>
    <string name="menu">Menú Principal</string>
    <string name="posicion">Posición Global</string>
    <string name="ingresos">Ingresos</string>
    <string name="transferencias">Transferencias</string>
    <string name="cambiarClave">Cambiar Clave</string>
    <string name="promociones">Promociones</string>
    <string name="cajerosCercanos">Cajeros Cercanos</string>
    <string name="claveActual">Clave Actual</string>
    <string name="aplicarCambio">Aplicar Cambio</string>
    <string name="realizar_transferencia">Realizar Transferencia</string>
    <string name="cuenta_origen">Cuenta origen:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="propia">Propia</string>
    <string name="ajena">Ajena</string>
    <string name="Dinerbank">DINERBANK</string>
    <string name="Título">DINERBANK</string>
    <string name="Subtítulo">Bienvenido/a</string>
    <string name="preferencias">Preferencias</string>
    <string name="configuracion">Configuración</string>
    <string name="reproducir_musica">Reproducir música</string>
    <string name="reproducir_video">Reproducir video</string>
    <string name="guardar">Guardar</string>
    <string name="idiomaAplicacion">Idioma de la Aplicación</string>
    <string name="idioma">Idioma</string>
    <string name="origenDatos">Origen de los datos</string>
    <string name="origenDatosActuales">Origen de datos actualmente</string>
    <string name="labelDireccionCajero">Direccion:</string>
    <string name="labelLatitidCajero">Latitud:</string>
    <string name="labelLongitud">Longitud:</string>
    <string name="labelZoom">Zoom:</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="cajero_crear_confirmacion">Cajero creado correctamente</string>
    <string name="cajero_editar_confirmacion">Cajero editado correctamente</string>
    <string name="cajero_eliminar_mensaje">¿Seguro que desea eliminar el cajero?</string>
    <string name="cajero_eliminar_titulo">Eliminar cajero</string>
    <string name="cajero_eliminar_confirmacion">Cajero eliminado correctamente</string>
    <string name="menu_guardar">Guardar cajero</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="cajero_crear_titulo">Crear Cajero</string>
    <string name="cajero_editar_titulo">Modificar Cajero</string>
</resources>