<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_posicion_global"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/posicion"
        app:showAsAction="collapseActionView"></item>
    <item
        android:id="@+id/action_ingresos"
        android:orderInCategory="2"
        android:title="@string/ingresos"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_transferencias"
        android:orderInCategory="3"
        android:title="@string/transferencias"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_cambiar_clave"
        android:orderInCategory="4"
        android:title="@string/cambiarClave"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_promociones"
        android:orderInCategory="5"
        android:title="@string/promociones"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_cajeros_cercanos"
        android:orderInCategory="6"
        android:title="@string/cajerosCercanos"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_configuracion"
        android:orderInCategory="7"
        android:title="@string/configuracion"
        app:showAsAction="never"></item>
</menu>