<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="reproducirMusica"
        android:title="Música"
        android:summary="Escuchar la música mientras se ejecuta la aplicación" />
    <ListPreference
        android:key="idioma"
        android:title="@string/idiomaAplicacion"
        android:summary="@string/idioma"
        android:dialogTitle="Indicar idioma de la aplicación"
        android:entries="@array/idioma"
        android:entryValues="@array/codigoIdioma" />
    <ListPreference
        android:key="origenDatos"
        android:title="@string/origenDatos"
        android:summary="@string/origenDatosActuales"
        android:dialogTitle="Indicar origen de los datos"
        android:entries="@array/origenDatos"
        android:entryValues="@array/origenDatosValor" />
    <EditTextPreference
        android:key="nick"
        android:title="Nick por defecto"
        android:summary="Introduzca su nick por defecto"
        android:dialogTitle="Nick por defecto" />
    <ListPreference
        android:key="fuentes_letras_botones"
        android:title="Tipo de letras de los botones"
        android:summary="Tipo de letra"
        android:dialogTitle="Indicar el tipo de letra"
        android:entries="@array/fuentes"
        android:entryValues="@array/codigoFuentes" />
    <ListPreference
        android:key="color_fondo_botones"
        android:title="Color de fondo de los botones"
        android:summary="Elige el color de fondo de los botones"
        android:dialogTitle="Indicar color de fondo"
        android:entries="@array/coloresFondo"
        android:entryValues="@array/codigoColoresFondo" />
    <!--<MultiSelectListPreference
        android:key="paisesVisitados"
        android:title="Paises visitados"
        android:summary="Lista de paises visitados"
        android:dialogTitle="Indicar Paises que se ha visitado"
        android:entries="@array/idioma"
        android:entryValues="@array/codigoIdioma" />-->
</PreferenceScreen>