<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/txtMenuPrincipal"
        style="@style/TxtBienvenida.Cabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <ImageButton
        android:id="@+id/btVolver"
        style="@style/BotonesNormal"
        android:layout_width="75dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="Volver"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:layout_editor_absoluteX="-2dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPosicionGlobal"
                style="@style/TxtCabeceraIcono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/posicion"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIngresos"
                style="@style/TxtCabeceraIcono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ingresos"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btPosGlobal"
                style="@style/BotonesNormal"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:tag="@string/posicion"
                app:srcCompat="@drawable/posicionglobal" />

            <ImageButton
                android:id="@+id/btIngresos"
                style="@style/BotonesNormal"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:tag="@string/ingresos"
                app:srcCompat="@drawable/ingresos" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTransferencias"
                style="@style/TxtCabeceraIcono"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transferencias"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCambiarClave"
                style="@style/TxtCabeceraIcono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cambiarClave"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btTransfer"
                style="@style/BotonesNormal"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:tag="@string/transferencias"
                app:srcCompat="@drawable/transferencias" />

            <ImageButton
                android:id="@+id/btCambiarClave"
                style="@style/BotonesNormal"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:tag="@string/cambiarClave"
                app:srcCompat="@drawable/clave" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPromociones"
                style="@style/TxtCabeceraIcono"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/promociones"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCajeros"
                style="@style/TxtCabeceraIcono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cajerosCercanos"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="247dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btPromociones"
                style="@style/BotonesNormal"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:tag="@string/promociones"
                app:srcCompat="@drawable/promociones" />

            <ImageButton
                android:id="@+id/btCajerosCercanos"
                style="@style/BotonesNormal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/cajeros"
                android:tag="@string/cajerosCercanos" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textBienvenida"
        style="@style/TxtBienvenida.Cabecera.Secundaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenuPrincipal"
        app:layout_constraintVertical_bias="0.636" />

</androidx.constraintlayout.widget.ConstraintLayout>