<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".principal.GestionCajeroActivity">

    <TextView
        android:id="@+id/txtTitGestionCajero"
        style="@style/TxtBienvenida.Cabecera"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Gestión Cajero"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovimientos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/txtInfCajero"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Información del cajero"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/label_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelDireccionCajero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_direccion"
            android:layout_alignParentLeft="true"
            android:ems="10" />

        <TextView
            android:id="@+id/label_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direccion"
            android:layout_marginTop="20dp"
            android:text="@string/labelLatitidCajero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_latitud"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="textMultiLine"></EditText>

        <TextView
            android:id="@+id/label_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitud"
            android:layout_marginTop="20dp"
            android:text="@string/labelLongitud"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_longitud"
            android:layout_alignParentLeft="true"
            android:ems="10"></EditText>

        <TextView
            android:id="@+id/label_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitud"
            android:layout_marginTop="20dp"
            android:text="@string/labelZoom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_zoom"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="phone"></EditText>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>