<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Transferencias">

    <TextView
        android:id="@+id/txtTransfer"
        style="@style/TxtBienvenida.Cabecera.Secundaria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/realizar_transferencia"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/txtMovimientos"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text="@string/cuenta_origen"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <GridView
        android:id="@+id/gdCuentas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovimientos" />

    <TextView
        android:id="@+id/txtCuentaDestino"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="Cuenta destino: "
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gdCuentas" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCuentaDestino">

        <RadioButton
            android:id="@+id/btPropia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/propia"
            android:text="@string/propia" />

        <RadioButton
            android:id="@+id/btAjena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/ajena"
            android:text="@string/ajena" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spCuentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#7C7B7B"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/editTextCuentaAjena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#7C7B7B"
        android:ems="10"
        android:hint="ES ****"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/editTextTextImporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="Importe"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCuentaAjena" />

    <Spinner
        android:id="@+id/spDivisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextImporte" />

    <CheckBox
        android:id="@+id/checkBoxJustificante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Enviar justificante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDivisa" />

    <ImageButton
        android:id="@+id/btAceptar"
        style="@style/BotonesNormal"
        android:layout_width="132dp"
        android:layout_height="62dp"
        android:layout_marginStart="45dp"
        android:onClick="onClick"
        android:tag="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxJustificante" />

    <TextView
        android:id="@+id/txtAceptar"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:layout_marginStart="35dp"
        android:gravity="center_vertical"
        android:rotationX="25"
        android:text="@string/aceptar"
        android:textAlignment="center"
        android:textColor="@color/naranjaOscuro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/btAceptar"
        app:layout_constraintEnd_toEndOf="@+id/btAceptar"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAceptar"
        app:layout_constraintVertical_bias="0.265" />

    <ImageButton
        android:id="@+id/btCancelar"
        style="@style/BotonesNormal"
        android:layout_width="132dp"
        android:layout_height="62dp"
        android:layout_marginEnd="45dp"
        android:onClick="onClick"
        android:tag="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxJustificante" />

    <TextView
        android:id="@+id/txtCancelar"
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:gravity="center_vertical"
        android:rotationX="25"
        android:text="@string/cancelar"
        android:textAlignment="center"
        android:textColor="@color/naranjaOscuro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/btCancelar"
        app:layout_constraintEnd_toEndOf="@+id/btCancelar"
        app:layout_constraintStart_toStartOf="@+id/btCancelar"
        app:layout_constraintTop_toTopOf="@+id/btCancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>